--- a/home.css
+++ b/home.css
@@ -1,18 +1,32 @@
 header {
     background-color: #4C4AB9;
+    margin: 0%;
+    padding: 0%;
+}
+header nav #login, #menu{
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
 }
 #logo{
     width: 8%;
     height: 300px;
     float: left;
+    margin: 0%;
+    padding: 0%;
 }
+
 #login{
     height: 30px;
     width: 90px;
     float: left;
+    margin: 0%;
+    padding: 0%;
 }
 #menu{
     text-align: end;
+    margin: 0%;
+    padding: 0%;
 }
 body{
     background-color: black;
@@ -37,7 +51,7 @@ ol{
     float:right;
     color: white;
 }
-footer div img{
+footer .div .img{
     float:left;
     margin-top: 15px;
     margin-right: 10px;
