--- a/home.css
+++ b/home.css
@@ -1,60 +1,74 @@
-header {
-    background-color: #4C4AB9;
-    margin: 0%;
-    padding: 0%;
-}
-header nav #login, #menu{
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
+ body{
+    background-color: rgb(0, 0, 0);
     font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+} 
+
+.cabecalho{
+    background-color: #4C4AB9;
+    display: flex;
 }
-#logo{
-    width: 8%;
-    height: 300px;
-    float: left;
-    margin: 0%;
-    padding: 0%;
+header{
+    background-color: #4C4AB9;
+    height: 120px;
 }
 
-#login{
-    height: 30px;
-    width: 90px;
-    float: left;
-    margin: 0%;
-    padding: 0%;
+header .logo-marca img {
+    width: 5%;
+    height: 10%;
 }
-#menu{
-    text-align: end;
-    margin: 0%;
-    padding: 0%;
-}
-body{
-    background-color: black;
-}
-a{
+
+header .logo-marca img .titulo {
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
-h1{
+
+nav a{
+    color:white !important;
+}
+
+.navbar {
+    background-color: #4C4AB9 !important;
+}
+
+.roxo{
+    background-color: #4C4AB9;
+}
+
+.roxo a:hover{
+    background-color: #353488;
+}
+
+main h1{
+    text-align: center;
     color: white;
 }
-h2{
+
+main h2{
     color: white;
 }
-p{
+
+main .imagem1 p {
+    color: white;
+}
+
+main .imagem2 p {
+    color: white;
+}
+
+main .imagem3 p {
     color: white;
 }
 footer{
     background-color: #4C4AB9;
-    border: none;
-}
-ol{
-    float:right;
     color: white;
 }
-footer .div .img{
-    float:left;
-    margin-top: 15px;
-    margin-right: 10px;
-    margin-bottom: 25px;
-    margin-left: 35px;
+.carousel{
+    margin: 60px;
+    height: 20%;
+    display: flex;
+}
+.navbar-toggler-icon {
+    color: rgb(76, 0, 255);
 }
