--- a/atividadePresencial3/style.css
+++ b/atividadePresencial3/style.css
@@ -2,6 +2,12 @@ body{
     background-color: black;
 }
 
+.temaDarkBlue{
+    background: darkblue;
+    color: black;
+}
+
+
 .cabecalho .corFundo{
     background-color: rgb(27, 27, 214);
     width: fit-content;
